<resources>
    <string name="app_name">Ilona Recorder</string>
    <string name="action_settings">Settings</string>
    <string name="edit_message">Enter a message</string>
    <string name="magneto_yaxis">Y axis</string>
    <string name="magneto_zaxis">Z axis</string>
    <string name="magneto_xaxis">X axis</string>
    <string name="getvalues">Get Sensor Values</string>
    <string name="sendresults">Send Results</string>
    <string name="get_position">Get Position</string>
    <string name="UID">User name</string>
    <string name="PASS">Password</string>
    <string name="sendToTracking">Send to tracking</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">Filters</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_memsize">Memory Size</string>
    <string name="pref_title_threshold">Threshold Size</string>
    <string name="default_memory_size">5</string>
    <string name="default_treshold_size">5</string>

    <string name="pref_title_add_friends_to_messages">Filter Selection</string>
    <string-array name="filter_list_titles">
        <item>No Filter</item>
        <item>Horus</item>
        <item>Static Time Window</item>
        <item>Dynamic Time Window</item>
    </string-array>
    <string-array name="filter_list_values">
        <item>-1 </item>
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_settings_activitya">Settings</string>
</resources>
